Update the app description

--- a/fr.html
+++ b/fr.html
@@ -72,7 +72,7 @@
                     <div class="product-badge">Bientôt disponible</div>
                     <h3>Pheid</h3>
                     <p class="pronunciation"><em>/feed/</em></p>
-                    <p>Une application de notifications intelligente qui vous aide à rester au courant de ce qui compte, sans le bruit. Conçue pour mobile.</p>
+                    <p>Créez un canal, partagez le code et diffusez à tous ceux qui s'abonnent. Conçue pour mobile.</p>
                 </div>
             </div>
         </div>
