--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                     <div class="product-badge">Coming Soon</div>
                     <h3>Pheid</h3>
                     <p class="pronunciation"><em>/feed/</em></p>
-                    <p>A smart notification app that helps you stay on top of what matters without the noise. Built for mobile.</p>
+                    <p>Create a channel, share the code, and broadcast to everyone who joins. Built for mobile.</p>
                 </div>
             </div>
         </div>
