Add pheid.app link to Pheid product heading

--- a/fr.html
+++ b/fr.html
@@ -70,7 +70,7 @@
                 </div>
                 <div class="product-content">
                     <div class="product-badge">Bientôt disponible</div>
-                    <h3>Pheid</h3>
+                    <h3><a href="https://pheid.app" target="_blank" rel="noopener noreferrer">Pheid</a></h3>
                     <p class="pronunciation"><em>/feed/</em></p>
                     <p>Créez un canal, partagez le code et diffusez à tous ceux qui s'abonnent. Conçue pour mobile.</p>
                 </div>
