--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                 </div>
                 <div class="product-content">
                     <div class="product-badge">Coming Soon</div>
-                    <h3>Pheid</h3>
+                    <h3><a href="https://pheid.app" target="_blank" rel="noopener noreferrer">Pheid</a></h3>
                     <p class="pronunciation"><em>/feed/</em></p>
                     <p>Create a channel, share the code, and broadcast to everyone who joins. Built for mobile.</p>
                 </div>
